test/integration/cli-args/sstanc.t/fail/bad-before-observe.stan
data {
  real y;
}
model {
  real mu = y;
  y ~ normal(0, 1);
}
